[package]
name = "empress"
version = "0.1.0"
authors = ["sardonicism-04 <110789901+sardonicism-04@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = "0.9.2"
dbus-tokio = "0.7.3"
tokio = { version = "1.6.1", features = ["full"] }
futures = "0.3.15"